<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353232"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/scared"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/neutral"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/happy"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/bawling"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/disappointed"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/annoyed"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/sad"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/angry"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:padding="0dp"
        android:text="@string/content"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/button_change_emoji"
        android:layout_width="142dp"
        android:layout_height="79dp"
        android:backgroundTint="#5D6B6A"
        android:text="Change an Emoji"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/button_summary"
        android:layout_width="142dp"
        android:layout_height="79dp"
        android:backgroundTint="#7D7E6D"
        android:text="@string/summary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="142dp"
        android:layout_height="79dp"
        android:backgroundTint="#6C829D"
        android:text="See Logs"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />
</androidx.constraintlayout.widget.ConstraintLayout>